# social

./: .codecov.yml  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.yaml  entrypoint-heroku.sh  heroku.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: linters.yml  tests.yml
app/: main.py
app/controller/: Social.py
app/docker/: Dockerfile  init-mongodb.js  init_publications.js
app/exceptions/: BadRequestException.py  InternalServerErrorException.py  NotFoundException.py
app/models/: Post.py  Publication.py  SocialUser.py  base.py
app/query_params/: QueryParams.py
app/repository/: SocialMongo.py  SocialRepository.py
app/schemas/: Post.py  Publication.py  RealUser.py  SocialUser.py  User.py
app/security/: JWTBearer.py
app/service/: Social.py  Users.py  test_Social.py
app/tests/: service_test.py
app/utils/: mongo_exception_handling.py  update_at_trigger.py
tests/service/: test_Social.py  test_dummy.py  test_post_crud.py
