[tool.poetry]
name = "social"
version = "0.1.0"
description = ""
authors = ["Federico <fpacheco@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
httpx = "^0.26.0"
pymongo = "^4.6.3"
python-jose = "^3.3.0"
pytest = { version = "8.2.0", optional = true }
pytest-cov = { version = "5.0.0", optional = true }
pytest-asyncio = { version = "0.23.6", optional = true }
mongomock = { version = "4.1.2", optional = true }
setuptools = { version = "^69.5.1", optional = true }

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "mongomock", "setuptools"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"